cabal-version:      3.0
name:               non-integral
version:            1.0.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
description:        Implementation decision for non-integer calculations
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger.git
    subdir:   libs/non-integral

library
    exposed-modules:  Cardano.Ledger.NonIntegral
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:    base >=4.14 && <5

test-suite non-integral-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    other-modules:    Tests.Cardano.Ledger.NonIntegral
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -O2 -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base,
        non-integral,
        QuickCheck

benchmark non-integral-bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded -rtsopts -O2

    build-depends:
        base,
        bytestring,
        non-integral,
        containers,
        criterion,
        deepseq,
        random,
        text,
        statistics,
        directory,
        filepath,
        vector,
        pandoc,
        aeson,
